--- a/Cargo.toml
+++ b/Cargo.toml
@@ -147,6 +147,7 @@ linera-indexer-plugins = { path = "./linera-indexer/plugins" }
 linera-rpc = { version = "0.9.0", path = "./linera-rpc" }
 linera-sdk = { version = "0.9.0", path = "./linera-sdk" }
 linera-storage = { version = "0.9.0", path = "./linera-storage", default-features = false }
+linera-storage-service = { version = "0.9.0", path = "./linera-storage-service", default-features = false }
 linera-version = { version = "0.9.0", path = "./linera-version" }
 linera-views = { version = "0.9.0", path = "./linera-views", default-features = false }
 linera-views-derive = { version = "0.9.0", path = "./linera-views-derive" }
