--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -11,6 +11,7 @@ members = [
 ]
 
 [workspace.dependencies]
+assert_matches = "1.5.0"
 async-graphql = { version = "5.0.7", default-features = false }
 async-trait = "0.1.58"
 bcs = "0.1.3"
