--- a/examples/counter/Cargo.toml
+++ b/examples/counter/Cargo.toml
@@ -19,6 +19,7 @@ linera-sdk = { workspace = true, features = ["test", "wasmer"] }
 tokio = { workspace = true, features = ["rt", "sync"] }
 
 [dev-dependencies]
+assert_matches.workspace = true
 linera-sdk = { workspace = true, features = ["test"] }
 webassembly-test.workspace = true
 
