Correct the print statement that wrongly went into the commits and the order of dependencies.

--- a/linera-storage-service/Cargo.toml
+++ b/linera-storage-service/Cargo.toml
@@ -22,16 +22,16 @@ name = "storage_service_server"
 path = "src/server.rs"
 
 [dependencies]
-anyhow.workspace = true
 async-lock = { workspace = true }
 async-trait = { workspace = true }
+anyhow = { workspace = true }
 clap = { workspace = true }
+linera-service = { workspace = true }
 linera-views = { workspace = true }
 prost = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 tonic = { workspace = true }
-linera-service.workspace = true
 
 [dev-dependencies]
 linera-storage-service = { path = ".", features = ["test"] }
