--- a/linera-sdk/Cargo.toml
+++ b/linera-sdk/Cargo.toml
@@ -46,11 +46,11 @@ anyhow.workspace = true
 cargo_toml.workspace = true
 clap.workspace = true
 dashmap.workspace = true
-linera-base.workspace = true
-linera-chain.workspace = true
-linera-core = { workspace = true, features = ["test"] }
-linera-execution.workspace = true
-linera-storage.workspace = true
+linera-base = { workspace = true, features = ["metrics"] }
+linera-chain = { workspace = true, features = ["metrics"] }
+linera-core = { workspace = true, features = ["test", "metrics", "wasmer"] }
+linera-execution = { workspace = true, features = ["fs", "metrics", "wasmer"] }
+linera-storage = { workspace = true, features = ["metrics", "wasmer"] }
 serde_json.workspace = true
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 wasmtime.workspace = true
