Replace `mock-instance` feature with `test`
Make it clearer that the `MockInstance` type should only be used for
testing.

--- a/linera-witty-macros/Cargo.toml
+++ b/linera-witty-macros/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2021"
 proc-macro = true
 
 [features]
-mock-instance = ["syn/extra-traits"]
+test = ["syn/extra-traits"]
 wasmer = ["syn/extra-traits"]
 wasmtime = ["syn/extra-traits"]
 
