Use `cfg_aliases` in `linera-witty`
Create aliases for the different configurations.

--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -31,3 +31,6 @@ wasmtime = { workspace = true, optional = true }
 linera-witty = { workspace = true, features = ["macros", "test"] }
 test-case.workspace = true
 tracing.workspace = true
+
+[build-dependencies]
+cfg_aliases.workspace = true
