--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,7 +85,7 @@ proc-macro2 = "1.0"
 proptest = { version = "1.3.1", default-features = false, features = ["std"] }
 prost = "0.11"
 quote = "1.0"
-rand = "0.8.5"
+rand = { version = "0.8.5", default-features = false }
 rand_chacha = "0.3.1"
 rand_distr = "0.4.3"
 k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
