--- a/linera-indexer/plugins/Cargo.toml
+++ b/linera-indexer/plugins/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2021"
 default = ["rocksdb"]
 benchmark = ["linera-base/test"]
 rocksdb = ["linera-views/rocksdb", "linera-indexer/rocksdb"]
-aws = ["linera-views/aws", "linera-indexer/aws"]
+aws = ["linera-views/dynamodb", "linera-indexer/aws"]
 scylladb = ["linera-views/scylladb", "linera-indexer/scylladb"]
 wasmer = ["linera-execution/wasmer"]
 wasmtime = ["linera-execution/wasmtime"]
