--- a/linera-base/Cargo.toml
+++ b/linera-base/Cargo.toml
@@ -30,7 +30,7 @@ thiserror.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 chrono.workspace = true
-rand07.workspace = true
+rand.workspace = true
 prometheus.workspace = true
 
 [dev-dependencies]
