--- a/linera-storage-service/Cargo.toml
+++ b/linera-storage-service/Cargo.toml
@@ -29,6 +29,7 @@ bcs.workspace = true
 clap.workspace = true
 linera-views.workspace = true
 linera-base.workspace = true
+linera-version.workspace = true
 prost.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["rt-multi-thread"] }
