Refactor Witty feature flags (#1672)
* Replace `mock-instance` feature with `test`

Make it clearer that the `MockInstance` type should only be used for
testing.

* Use `cfg_aliases` in `linera-witty-macros`

Create aliases for the different configurations.

* Use `cfg_aliases` in `linera-witty`

Create aliases for the different configurations.

* Add a TODO for removing feature flags

Link to an issue to describe why they are used as a workaround until
proper runtime agnostic code can be generated.

--- a/linera-witty-macros/Cargo.toml
+++ b/linera-witty-macros/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2021"
 proc-macro = true
 
 [features]
-mock-instance = ["syn/extra-traits"]
+test = ["syn/extra-traits"]
 wasmer = ["syn/extra-traits"]
 wasmtime = ["syn/extra-traits"]
 
@@ -24,3 +24,6 @@ proc-macro-error.workspace = true
 proc-macro2.workspace = true
 quote.workspace = true
 syn = { workspace = true, features = ["full"] }
+
+[build-dependencies]
+cfg_aliases.workspace = true
