Restrict operations to an optional chain application.

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -582,6 +582,9 @@ OpenChainConfig:
             TYPENAME: Committee
     - balance:
         TYPENAME: Amount
+    - chain_application:
+        OPTION:
+          TYPENAME: ApplicationId
 Operation:
   ENUM:
     0:
