--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,3 +4,7 @@ runner = "target/release/linera-wasm-test-runner"
 
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
+
+[build]
+# We allow redundant explicit links because `cargo rdme` doesn't know how to resolve implicit intra-crate links.
+rustdocflags = ["-Arustdoc::redundant_explicit_links"]
