--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,14 +47,15 @@ bincode = "1.3.3"
 bytes = "1.5.0"
 cargo_metadata = "0.18.1"
 cargo_toml = "0.15.3"
+cfg-if = "1.0.0"
 cfg_aliases = "0.2.0"
-chrono = "0.4.31"
+chrono = { version = "0.4.31", default-features = false }
 clap = { version = "4", features = ["cargo", "derive", "env"] }
 clap-markdown = "0.1.3"
 colored = "2.0.4"
 comfy-table = "6.2.0"
 convert_case = "0.6.0"
-criterion = "0.4.0"
+criterion = { version = "0.4.0", default-features = false }
 custom_debug_derive = "0.5.1"
 dashmap = "5.5.3"
 derive_more = "0.99.17"
@@ -67,6 +68,7 @@ fs-err = { version = "2.11.0", features = ["tokio"] }
 fs_extra = "1.3.0"
 futures = "0.3.29"
 generic-array = { version = "0.14.7", features = ["serde"] }
+getrandom = "0.2.11"
 hex = "0.4.3"
 http = "0.2.9"
 glob = "0.3.1"
@@ -81,12 +83,12 @@ prettyplease = "0.2.15"
 prometheus = "0.13.3"
 proc-macro-error = "1.0.4"
 proc-macro2 = "1.0"
-proptest = "1.3.1"
-prost = "0.11"
+proptest = { version = "1.3.1", default-features = false }
+prost = "0.12.3"
 quote = "1.0"
-rand = "0.8.5"
-rand_chacha = "0.3.1"
-rand_distr = "0.4.3"
+rand = { version = "0.8.5", default-features = false }
+rand_chacha = { version = "0.3.1", default-features = false }
+rand_distr = { version = "0.4.3", default-features = false }
 k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
 pathdiff = "0.2.1"
 kube = "0.87.1"
@@ -110,9 +112,9 @@ test-case = "3.2.1"
 test-log = { version = "0.2.13", default-features = false, features = ["trace"] }
 test-strategy = "0.2.1"
 thiserror = "1.0.50"
-tonic = { version = "0.8", features = ["tls", "tls-roots", "transport"] }
-tonic-build = "0.8"
-tonic-health = "0.8"
+tonic = { version = "0.10.2", default-features = false }
+tonic-build = { version = "0.10.2", default-features = false }
+tonic-health = "0.10.2"
 tokio = "1.33.0"
 tokio-stream = "0.1.14"
 tokio-test = "0.4.3"
