--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -21,7 +21,7 @@ rocksdb = [
     "linera-core/rocksdb",
     "linera-storage/rocksdb",
 ]
-aws = ["linera-views/aws", "linera-core/aws", "linera-storage/aws"]
+aws = ["linera-views/dynamodb", "linera-core/aws", "linera-storage/dynamodb"]
 scylladb = [
     "linera-views/scylladb",
     "linera-core/scylladb",
@@ -38,7 +38,7 @@ async-trait.workspace = true
 axum = { workspace = true, features = ["ws", "headers"] }
 bcs.workspace = true
 cargo_toml = "0.15.3"
-chrono.workspace = true
+chrono = { workspace = true, features = ["clock"] }
 clap.workspace = true
 clap-markdown.workspace = true
 colored.workspace = true
@@ -54,14 +54,14 @@ hex.workspace = true
 http.workspace = true
 k8s-openapi = { workspace = true, optional = true }
 kube = { workspace = true, optional = true }
-linera-base.workspace = true
-linera-chain.workspace = true
-linera-core.workspace = true
-linera-execution.workspace = true
-linera-rpc.workspace = true
-linera-storage.workspace = true
+linera-base = { workspace = true, features = ["metrics"] }
+linera-chain = { workspace = true, features = ["metrics"] }
+linera-core = { workspace = true, features = ["metrics"] }
+linera-execution = { workspace = true, features = ["fs", "metrics"] }
+linera-rpc = { workspace = true, features = ["metrics"] }
+linera-storage = { workspace = true, features = ["metrics"] }
 linera-version.workspace = true
-linera-views.workspace = true
+linera-views = { workspace = true, features = ["metrics"] }
 pathdiff = { workspace = true, optional = true }
 port-selector = { workspace = true, optional = true }
 prometheus.workspace = true
@@ -75,7 +75,7 @@ thiserror.workspace = true
 tokio = { workspace = true, features = ["full"] }
 tokio-stream.workspace = true
 toml.workspace = true
-tonic.workspace = true
+tonic = { workspace = true, features = ["transport", "tls", "tls-roots"] }
 tonic-health.workspace = true
 tower.workspace = true
 tower-http = { workspace = true, features = ["cors"] }
