--- a/linera-storage-service/Cargo.toml
+++ b/linera-storage-service/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 [features]
 default = ["rocksdb"]
 rocksdb = ["linera-views/rocksdb"]
-aws = ["linera-views/aws"]
+aws = ["linera-views/dynamodb"]
 scylladb = ["linera-views/scylladb"]
 test = ["linera-views/test"]
 
@@ -31,18 +31,18 @@ linera-views.workspace = true
 prost.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["rt-multi-thread"] }
-tonic.workspace = true
+tonic = { workspace = true, features = ["transport"] }
 
 [dev-dependencies]
 linera-storage-service = { path = ".", features = ["test"] }
-proptest.workspace = true
+proptest = { workspace = true, features = ["alloc"] }
 serde-reflection.workspace = true
 serde_yaml.workspace = true
 similar-asserts.workspace = true
 test-strategy.workspace = true
 
 [build-dependencies]
-tonic-build.workspace = true
+tonic-build = { workspace = true, features = ["prost", "transport"] }
 
 [package.metadata.cargo-machete]
 ignored = ["proptest", "prost"]
