--- a/linera-storage/Cargo.toml
+++ b/linera-storage/Cargo.toml
@@ -44,13 +44,15 @@ futures.workspace = true
 linera-base.workspace = true
 linera-chain.workspace = true
 linera-execution.workspace = true
-linera-storage-service.workspace = true
 linera-views.workspace = true
 prometheus.workspace = true
 serde.workspace = true
 tempfile.workspace = true
 tokio = { workspace = true, features = ["macros"] }
 tracing.workspace = true
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+linera-storage-service.workspace = true
 
 [dev-dependencies]
 anyhow.workspace = true
