Test if `InvalidVariant` error is returned
Check that it contains the extra useful information.

--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -28,6 +28,7 @@ wasmer-vm = { workspace = true, optional = true }
 wasmtime = { workspace = true, optional = true }
 
 [dev-dependencies]
+assert_matches.workspace = true
 linera-witty = { workspace = true, features = ["macros", "test"] }
 test-case.workspace = true
 tracing.workspace = true
