--- a/kubernetes/linera-validator/helmfile.yaml
+++ b/kubernetes/linera-validator/helmfile.yaml
@@ -26,6 +26,12 @@ releases:
         value: {{ env "LINERA_HELMFILE_SET_GENESIS_CONFIG" | default "working/genesis.json" }}
       - name: numShards
         value: {{ env "LINERA_HELMFILE_SET_NUM_SHARDS" | default 10 }}
+      - name: lineraImage
+        value: {{ env "LINERA_HELMFILE_LINERA_IMAGE" | default "linera-test:latest" }}
+      - name: staticIpGcpName
+        value: {{ env "LINERA_HELMFILE_STATIC_IP_GCP_NAME" | default "" }}
+      - name: validatorDomainName
+        value: {{ env "LINERA_HELMFILE_VALIDATOR_DOMAIN_NAME" | default "" }}
   - name: scylla
     namespace: scylla
     chart: scylla/scylla
