--- a/linera-storage-service/Cargo.toml
+++ b/linera-storage-service/Cargo.toml
@@ -30,6 +30,7 @@ clap.workspace = true
 linera-base.workspace = true
 linera-version.workspace = true
 linera-views.workspace = true
+port-selector.workspace = true
 prost.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["full"] }
