--- a/.github/workflows/scylladb.yml
+++ b/.github/workflows/scylladb.yml
@@ -53,10 +53,7 @@ jobs:
         cargo build --locked --features scylladb
     - name: Setup local ScyllaDB instance
       run: |
-        cd docker_scylla
-        docker build -t scylla_modified .
-        docker run --name my_scylla_container -d -p 9042:9042 scylla_modified
-        cd ..
+        docker run --name my_scylla_container -d -p 9042:9042 scylladb/scylla
     - name: Run ScyllaDB tests
       run: |
         cargo test --locked --features scylladb -- scylla
