--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -56,10 +56,10 @@ k8s-openapi = { workspace = true, optional = true }
 kube = { workspace = true, optional = true }
 linera-base = { workspace = true, features = ["metrics"] }
 linera-chain = { workspace = true, features = ["metrics"] }
-linera-core = { workspace = true, features = ["metrics"] }
-linera-execution = { workspace = true, features = ["fs", "metrics"] }
-linera-rpc = { workspace = true, features = ["metrics"] }
-linera-storage = { workspace = true, features = ["metrics"] }
+linera-core = { workspace = true, features = ["metrics", "rocksdb", "wasmer"] }
+linera-execution = { workspace = true, features = ["fs", "metrics", "wasmer"] }
+linera-rpc.workspace = true
+linera-storage = { workspace = true, features = ["metrics", "wasmer"] }
 linera-storage-service.workspace = true
 linera-version.workspace = true
 linera-views = { workspace = true, features = ["metrics"] }
