Implement the storage service for the end-to-end tests (#1679)
* Implement the AdminKeyValueStorage for the ServiceStorage. So, now we have namespaces for the tests.
* Make the feature available to all the end-to-end tests along with ScyllaDb, DynamoDb, RocksDb
* To make the binary of storage accessible to other crates, not just in tests, the `resolve_binary` was used.
* The `resolve_binary` and `CommandExt` are moved to `linera-base` to avoid a circular dependency.
* The SharedStore was renamed ServiceStore.
* The child protection is extended by adding the checking of absence of endpoint before creation.
Co-authored-by: Andreas Fackler <afck@users.noreply.github.com>

--- a/linera-base/Cargo.toml
+++ b/linera-base/Cargo.toml
@@ -18,6 +18,7 @@ web = ["getrandom/js", "rand/getrandom", "rand/std", "rand/std_rng"]
 [dependencies]
 anyhow.workspace = true
 async-graphql.workspace = true
+async-trait.workspace = true
 bcs.workspace = true
 chrono.workspace = true
 ed25519-dalek.workspace = true
@@ -35,7 +36,11 @@ test-strategy = { workspace = true, optional = true }
 thiserror.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+chrono.workspace = true
 rand = { workspace = true, features = ["getrandom", "std", "std_rng"] }
+tokio = { workspace = true, features = ["process", "rt-multi-thread"] }
+tracing.workspace = true
+prometheus.workspace = true
 
 [dev-dependencies]
 custom_debug_derive.workspace = true
