--- a/linera-storage-service/Cargo.toml
+++ b/linera-storage-service/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "linera-storage-service"
-version = "0.6.0"
+version = "0.9.0"
 description = "RPC shared key value store."
 authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
@@ -25,13 +25,16 @@ path = "src/server.rs"
 anyhow.workspace = true
 async-lock.workspace = true
 async-trait.workspace = true
+bcs.workspace = true
 clap.workspace = true
-linera-service.workspace = true
+linera-base.workspace = true
+linera-version.workspace = true
 linera-views.workspace = true
+port-selector.workspace = true
 prost.workspace = true
 thiserror.workspace = true
-tokio = { workspace = true, features = ["rt-multi-thread"] }
-tonic = { workspace = true, features = ["transport"] }
+tokio = { workspace = true, features = ["full"] }
+tonic = { workspace = true, features = ["codegen", "prost", "transport"] }
 
 [dev-dependencies]
 linera-storage-service = { path = ".", features = ["test"] }
