--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -73,6 +73,9 @@ tokio-stream.workspace = true
 tonic.workspace = true
 tracing.workspace = true
 
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+linera-storage-service.workspace = true
+
 [dev-dependencies]
 assert_matches.workspace = true
 counter.workspace = true
