--- a/linera-storage/Cargo.toml
+++ b/linera-storage/Cargo.toml
@@ -51,6 +51,9 @@ tempfile.workspace = true
 tokio = { workspace = true, features = ["macros"] }
 tracing.workspace = true
 
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+linera-storage-service.workspace = true
+
 [dev-dependencies]
 anyhow.workspace = true
 linera-storage = { path = ".", features = ["test"] }
