--- a/linera-service/template/contract.rs.template
+++ b/linera-service/template/contract.rs.template
@@ -12,7 +12,7 @@ use thiserror::Error;
 
 pub struct ApplicationContract {{
     state: Application,
-    runtime: ContractRuntime,
+    runtime: ContractRuntime<Self>,
 }}
 
 linera_sdk::contract!(ApplicationContract);
@@ -27,7 +27,7 @@ impl Contract for ApplicationContract {{
     type Storage = ViewStateStorage<Self>;
     type State = Application;
 
-    async fn new(state: Self::State, runtime: ContractRuntime) -> Result<Self, Self::Error> {{
+    async fn new(state: Self::State, runtime: ContractRuntime<Self>) -> Result<Self, Self::Error> {{
         Ok(ApplicationContract {{ state, runtime }})
     }}
 
