--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -37,7 +37,7 @@ async-graphql-axum.workspace = true
 async-trait.workspace = true
 axum = { workspace = true, features = ["ws", "headers"] }
 bcs.workspace = true
-cargo_toml = "0.15.3"
+cargo_toml.workspace = true
 chrono = { workspace = true, features = ["clock"] }
 clap.workspace = true
 clap-markdown.workspace = true
@@ -45,7 +45,7 @@ colored.workspace = true
 comfy-table.workspace = true
 current_platform = "0.2.0"
 dirs.workspace = true
-file-lock = "2.1.10"
+file-lock = "2.1.11"
 fs-err.workspace = true
 fs_extra = { workspace = true, optional = true }
 fungible = { workspace = true, optional = true }
