--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -35,7 +35,7 @@ anyhow.workspace = true
 async-graphql.workspace = true
 async-graphql-axum.workspace = true
 async-trait.workspace = true
-axum = { workspace = true, features = ["ws", "headers"] }
+axum = { workspace = true, features = ["ws"] }
 bcs.workspace = true
 cargo_toml.workspace = true
 chrono = { workspace = true, features = ["clock"] }
